--- a/client/src/styles/Menu.css
+++ b/client/src/styles/Menu.css
@@ -11,7 +11,8 @@
 
 .menu {
   height: 100%;
-  width: 230px;
+  width: 200px;
+  background-color: #CCC;
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -26,7 +27,6 @@
 @media only screen and (max-width: 800px) {
   .menu {
     width: 35px;
-    background-color: #eee;
     overflow: hidden;
     padding: 0 5px;
   }
@@ -36,21 +36,6 @@
   .menu {
     width: 0;
     padding: 0;
-  }
-}
-
-.menu__input {
-  height: 24px;
-  width: 100%;
-  border-radius: 2px;
-  border: 2px solid #bdbdbd;
-  margin-bottom: 7.5px;
-  box-sizing: border-box;
-}
-
-@media only screen and (max-width: 800px) {
-  .menu__input {
-    margin-bottom: 0;
   }
 }
 
@@ -71,29 +56,6 @@
   opacity: 0.5;
 }
 
-.menu__row-icon__svg {
-  width: inherit;
-  height: inherit;
-}
-
-.menu__row-username {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.menu__row-icon--search {
-  height: 40px;
-  display: none;
-  cursor: pointer;
-}
-
-@media only screen and (max-width: 800px) {
-  .menu__row-icon--search {
-    display: block;
-  }
-}
-
 .menu__row-icon--avatar {
   background-color: #c8c8c8;
   border-radius: 50%;
@@ -104,15 +66,6 @@
   .menu__row-icon--avatar {
     pointer-events: none;
   }
-}
-
-.menu__row-icon--user {
-  margin-right: 5px;
-  margin-left: auto;
-}
-
-.menu__row-icon--logout {
-  margin: 0;
 }
 
 .menu-mobile {
@@ -137,4 +90,8 @@
   width: 25px;
   height: 25px;
   cursor: pointer;
+}
+
+.menu--logo {
+  height: 130px;
 }
